# brutus-voice

./: Cargo.toml  README.md  config.json  config.json.example  speak.sh  start.sh
src/: audio_capture.rs  config.rs  llm.rs  main.rs  state.rs  stt.rs  tts.rs  wake_word.rs  webserver.rs
